<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
	<string name="app_name">Zealotry</string>
	<string name="act_main">Main</string>
	<string name="act_sunshine">Sunrise</string>
	<string name="main_text_input">Blank</string>

	<string name="NaN">Nun</string>
	<string name="Monday">Day of the Moon</string>
	<string name="Tuesday">Tyr\'s day</string>
	<string name="Wednesday">Wodan\'s day</string>
	<string name="Thursday">Thor\'s day</string>
	<string name="Friday">Frigg\'s day</string>
	<string name="Saturday">Saturn\'s day</string>
	<string name="DanishSaturday">Lør dag</string>
	<string name="OldNorseSaturday">Laugar dagr</string>
	<string name="Sunday">Day of the Sun</string>

	<string name="main_morning_menu">Morning</string>
	<string name="act_morning">Good Morning</string>

	<string name="wake_up">Wake up</string>
	<string name="textSunriseTime">Sunrise Today:</string>
	<string name="textSunriseTimeTomorrow">Sunrise Tomorrow:</string>
	<string name="textLatestRise">Latest Rise:</string>
	<string name="textLeaveBy">Time to Leave:</string>
	<string name="wakeUpExplanation">ZEALOTRY will wake you somewhere between sunrise and your latest rise. Your latest rise is based on the time you take to get ready in the morning and when you need to leave the house.</string>
	<string name="SetAlarm">Set Alarm</string>

	<string name="get_up">Get up</string>
	<string name="shower">Shower</string>
	<string name="news">News</string>
	<string name="curtains">Open curtains</string>
	<string name="coffee">Coffee</string>
	<string name="smoothie">Smoothie</string>
	<string name="water">Water</string>
	<string name="vitamins">Vitamins</string>
	<string name="dishes">Dishes</string>
	<string name="breakfast">Breakfast</string>
	<string name="water_plants">Water plants</string>
	<string name="meditation">Meditation</string>
	<string name="language">Language</string>
	<string name="brush_teeth">Brush teeth</string>
	<string name="gel">Gel, cologne etc</string>
	<string name="pack">Pack bag</string>
	<string name="make_bed">Make bed</string>
	<string name="bins">Take out the bins</string>

	<string name="main_day_menu">Day</string>
	<string name="act_day">Good Day</string>

	<string name="travel">Travel</string>
	<string name="book">Audio-book</string>
	<string name="work">Work</string>
	<string name="lunch">Lunch</string>
	<string name="working">Working</string>
	<string name="_break">On a break</string>

	<string name="main_evening_menu">Evening</string>
	<string name="act_evening">Good Evening</string>

	<string name="unpack">Unpack</string>
	<string name="laundry">Laundry</string>
	<string name="set_alarms">Set alarms</string>
	<string name="exercise">Exercise</string>
	<string name="shop">Shopping</string>
	<string name="cook">Cooking</string>
	<string name="chill">Relax</string>
	<!--	dishes-->
	<!--	brush teeth-->
	<string name="lock_up">Lock up</string>
	<string name="clothes">Clothes</string>
	<string name="sleep">Sleep</string>

	<string name="journal">Journal</string>

	<string name="act_githubsearch">GitHub Search</string>
	<string name="githubMenu">Search</string>
	<string name="searchFailed">Failed to get results, please try again.</string>

	<string name="act_Overview">Overview</string>
	<string name="act_WeatherForecast">Weather Forecast</string>
	<string name="act_ManageBackups">App Data Management</string>
	<string name="today">Today</string>
	<string name="tomorrow">Tomorrow</string>
	<string name="action_refresh">Refresh</string>
	<string name="action_map">Map Location</string>
	<string name="action_share">Share</string>
	<string name="error_message">
        An error has occurred. Please REFRESH
    </string>
	<string name="format_full_friendly_date">
        <xliff:g id="day">%2$s</xliff:g>, <xliff:g id="month">%1$s</xliff:g>
    </string>
	<!-- Temperature format in Celsius [CHAR LIMIT=5] -->
	<string name="format_temperature_celsius">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0C
    </string>
	<!-- Temperature format in Fahrenheit [CHAR LIMIT=5] -->
	<string name="format_temperature_fahrenheit">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0F
    </string>
	<!-- Temperature format in Kelvin [CHAR LIMIT=5] -->
	<string name="format_temperature_Kelvin">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0K
    </string>
	<!-- Wind in kph [CHAR LIMIT=25] -->
	<string name="format_wind_kmh">
        <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>
	<!-- Wind in mph [CHAR LIMIT=25] -->
	<string name="format_wind_mph">
        <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>
	<!-- Weather Conditions (From OpenWeatherMap) -->
	<string name="condition_2xx">Storm</string>
	<string name="condition_3xx">Drizzle</string>
	<string name="condition_500">Light Rain</string>
	<string name="condition_501">Moderate Rain</string>
	<string name="condition_502">Heavy Rain</string>
	<string name="condition_503">Intense Rain</string>
	<string name="condition_504">Extreme Rain</string>
	<string name="condition_511">Freezing Rain</string>
	<string name="condition_520">Light Shower</string>
	<string name="condition_521">Shower</string>
	<string name="condition_522">Heavy Shower</string>
	<string name="condition_531">Ragged Shower</string>
	<string name="condition_600">Light Snow</string>
	<string name="condition_601">Snow</string>
	<string name="condition_602">Heavy Snow</string>
	<string name="condition_611">Sleet</string>
	<string name="condition_612">Shower Sleet</string>
	<string name="condition_615">Rain and Snow</string> <!-- light rain and snow -->
	<string name="condition_616">Rain and Snow</string>
	<string name="condition_620">Shower Snow</string> <!-- light shower snow -->
	<string name="condition_621">Shower Snow</string>
	<string name="condition_622">Shower Snow</string> <!-- heavy shower snow -->
	<string name="condition_701">Mist</string>
	<string name="condition_711">Smoke</string>
	<string name="condition_721">Haze</string>
	<string name="condition_731">Sand, Dust</string>
	<string name="condition_741">Fog</string>
	<string name="condition_751">Sand</string>
	<string name="condition_761">Dust</string>
	<string name="condition_762">Volcanic Ash</string>
	<string name="condition_771">Squalls</string>
	<string name="condition_781">Tornado</string>
	<string name="condition_800">Clear</string>
	<string name="condition_801">Mostly Clear</string>
	<string name="condition_802">Scattered Clouds</string>
	<string name="condition_803">Broken Clouds</string>
	<string name="condition_804">Overcast Clouds</string>
	<string name="condition_900">Tornado</string>
	<string name="condition_901">Tropical Storm</string>
	<string name="condition_902">Hurricane</string>
	<string name="condition_903">Cold</string>
	<string name="condition_904">Hot</string>
	<string name="condition_905">Windy</string>
	<string name="condition_906">Hail</string>
	<string name="condition_951">Calm</string>
	<string name="condition_952">Light Breeze</string>
	<string name="condition_953">Gentle Breeze</string>
	<string name="condition_954">Breeze</string> <!-- moderate breeze -->
	<string name="condition_955">Fresh Breeze</string>
	<string name="condition_956">Strong Breeze</string>
	<string name="condition_957">High Wind</string>
	<string name="condition_958">Gale</string>
	<string name="condition_959">Severe Gale</string>
	<string name="condition_960">Storm</string>
	<string name="condition_961">Violent Storm</string>
	<string name="condition_962">Hurricane</string>
	<string name="condition_unknown">Unknown (<xliff:g id="conditionId">%1$d</xliff:g>)</string>
</resources>