<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Evening_menu">

	<!--	<ScrollView-->
	<!--		android:layout_width="0dp"-->
	<!--		android:layout_height="wrap_content"-->
	<!--		android:scrollbarStyle="insideOverlay"-->
	<!--		app:layout_constraintBottom_toBottomOf="parent"-->
	<!--		app:layout_constraintEnd_toEndOf="parent"-->
	<!--		app:layout_constraintStart_toStartOf="parent"-->
	<!--		app:layout_constraintTop_toTopOf="parent">-->

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">
		<!--			app:layout_constraintBottom_toBottomOf="parent"-->
		<!--			app:layout_constraintEnd_toEndOf="parent"-->
		<!--			app:layout_constraintStart_toStartOf="parent"-->
		<!--			app:layout_constraintTop_toTopOf="parent">-->

		<Button
			android:id="@+id/unpack_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="5"
			android:drawableStart="@drawable/unpack_alt_small"
			android:drawableLeft="@drawable/unpack_alt_small"
			android:text="@string/unpack" />

		<Button
			android:id="@+id/laundry_button_1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="5"
			android:drawableStart="@drawable/deer_head_small"
			android:drawableLeft="@drawable/deer_head_small"
			android:text="@string/laundry" />

		<Button
			android:id="@+id/set_alarms_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="5"
			android:drawableStart="@drawable/wake_up_small"
			android:drawableLeft="@drawable/wake_up_small"
			android:text="@string/set_alarms" />

		<Button
			android:id="@+id/exercise_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/exercise"
			android:layout_weight="15"/>

		<Button
			android:id="@+id/shopping_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/shop"
			android:layout_weight="30"/>

		<Button
			android:id="@+id/cooking_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="45"
			android:drawableStart="@drawable/grain_jar_small"
			android:drawableLeft="@drawable/grain_jar_small"
			android:text="@string/cook" />

		<Button
			android:id="@+id/chill_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/chill"
			android:layout_weight="100"/>

		<Button
			android:id="@+id/laundry_button_2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="10"
			android:drawableStart="@drawable/deer_head_small"
			android:drawableLeft="@drawable/deer_head_small"
			android:text="@string/laundry" />

		<Button
			android:id="@+id/dishes_button_2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="25"
			android:drawableStart="@drawable/posession_stone_small"
			android:drawableLeft="@drawable/posession_stone_small"
			android:text="@string/dishes" />

		<Button
			android:id="@+id/teeth_button_2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="10"
			android:drawableStart="@drawable/tooth_alt_small"
			android:drawableLeft="@drawable/tooth_alt_small"
			android:text="@string/brush_teeth" />

		<Button
			android:id="@+id/lock_up"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/lock_up"
			android:layout_weight="2"/>

		<Button
			android:id="@+id/clothes_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/clothes"
			android:layout_weight="5"/>

		<Button
			android:id="@+id/sleep_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:drawableStart="@drawable/kimi_small"
			android:drawableLeft="@drawable/kimi_small"
			android:text="@string/sleep" />

	</LinearLayout>
	<!--	</ScrollView>-->

</androidx.constraintlayout.widget.ConstraintLayout>