<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Day_menu">

<!--	<ScrollView-->
<!--		android:layout_width="0dp"-->
<!--		android:layout_height="wrap_content"-->
<!--		android:scrollbarStyle="insideOverlay"-->
<!--		app:layout_constraintBottom_toBottomOf="parent"-->
<!--		app:layout_constraintEnd_toEndOf="parent"-->
<!--		app:layout_constraintStart_toStartOf="parent"-->
<!--		app:layout_constraintTop_toTopOf="parent">-->

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">
			<!--			app:layout_constraintBottom_toBottomOf="parent"-->
			<!--			app:layout_constraintEnd_toEndOf="parent"-->
			<!--			app:layout_constraintStart_toStartOf="parent"-->
			<!--			app:layout_constraintTop_toTopOf="parent">-->

			<Button
				android:id="@+id/travel_button_1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/travel"
				android:layout_weight="20"/>

			<Button
				android:id="@+id/book_button_1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/book"
				android:layout_weight="20"/>

			<Button
				android:id="@+id/work_button_1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/work"
				android:layout_weight="120"/>

			<Button
				android:id="@+id/lunch"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/lunch"
				android:layout_weight="30"/>

			<Button
				android:id="@+id/work_button_2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/work"
				android:layout_weight="120"/>

			<Button
				android:id="@+id/work_button_3"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/work"
				android:layout_weight="120"/>

			<Button
				android:id="@+id/book_button_2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/book"
				android:layout_weight="20"/>

			<Button
				android:id="@+id/travel_button_2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/travel"
				android:layout_weight="20"/>

		</LinearLayout>
<!--	</ScrollView>-->


</androidx.constraintlayout.widget.ConstraintLayout>