<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainMenu.MainActivity">

<!--	<TextView-->
<!--		android:id="@+id/Day"-->
<!--		android:layout_width="wrap_content"-->
<!--		android:layout_height="wrap_content"-->
<!--		android:text="@string/NaN"-->
<!--		app:layout_constraintEnd_toEndOf="parent"-->
<!--		app:layout_constraintStart_toStartOf="parent"-->
<!--		app:layout_constraintTop_toTopOf="parent" />-->

<!--	<EditText-->
<!--		android:id="@+id/inputTextName"-->
<!--		android:layout_width="wrap_content"-->
<!--		android:layout_height="wrap_content"-->
<!--		android:ems="10"-->
<!--		android:inputType="textPersonName"-->
<!--		android:text="@string/main_text_input"-->
<!--		app:layout_constraintEnd_toEndOf="parent"-->
<!--		app:layout_constraintStart_toStartOf="parent"-->
<!--		app:layout_constraintTop_toBottomOf="@+id/Day" />-->

<!--	<ScrollView-->
<!--		android:layout_width="match_parent"-->
<!--		android:layout_height="wrap_content"-->
<!--		android:padding="32dip"-->
<!--		app:layout_constraintBottom_toBottomOf="parent"-->
<!--		app:layout_constraintEnd_toEndOf="parent"-->
<!--		app:layout_constraintStart_toStartOf="parent"-->
<!--		app:layout_constraintTop_toTopOf="@+id/guideline">-->

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<Button
				android:id="@+id/Overview"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="10"
				android:onClick="launchOverviewMenu"
				android:text="@string/act_Overview"
				android:fontFamily="@font/quaver"
				android:textAllCaps="false"
				android:textSize="20sp"/>

			<Button
				android:id="@+id/Morning_Menu"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="30"
				android:background="@drawable/morning_button_clickable"
				android:onClick="launchMorningMenu"
				android:text="@string/main_morning_menu"
				android:gravity="bottom|center"
				android:elegantTextHeight="true"
				android:fontFamily="@font/quaver"
				android:textAllCaps="false"
				android:textSize="36sp"/>

			<Button
				android:id="@+id/Day_Menu"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="30"
				android:background="@drawable/day_button_clickable"
				android:onClick="launchDayMenu"
				android:fontFamily="@font/quaver"
				android:gravity="bottom|center"
				android:elegantTextHeight="true"
				android:textAllCaps="false"
				android:text="@string/main_day_menu"
				android:textSize="36sp"/>

			<Button
				android:id="@+id/Evening_Menu"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:layout_weight="30"
				android:background="@drawable/evening_button_clickable"
				android:onClick="launchEveningMenu"
				android:fontFamily="@font/quaver"
				android:gravity="bottom|center"
				android:elegantTextHeight="true"
				android:textAllCaps="false"
				android:text="@string/main_evening_menu"
				android:textSize="36sp"/>

			<!--			<Button-->
<!--				android:id="@+id/GHsearch"-->
<!--				android:layout_width="match_parent"-->
<!--				android:layout_height="wrap_content"-->
<!--				android:onClick="launchGitHubSearch"-->
<!--				android:text="@string/act_githubsearch" />-->

<!--			<Button-->
<!--				android:id="@+id/NewAct"-->
<!--				android:layout_width="match_parent"-->
<!--				android:layout_height="wrap_content"-->
<!--				android:onClick="launchNewActivity"-->
<!--				android:text="@string/act_second" />-->

<!--			<TextView-->
<!--				android:id="@+id/tv_toy_names"-->
<!--				android:layout_width="match_parent"-->
<!--				android:layout_height="wrap_content"-->
<!--				android:padding="16dp"-->
<!--				android:textSize="20sp" />-->
		</LinearLayout>
<!--	</ScrollView>-->

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.15" />

</androidx.constraintlayout.widget.ConstraintLayout>

